--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: view the secrets context
         shell: bash
-        run: echo "$SECRETS_CONTEXT[0]"
+        run: echo $SECRETS_CONTEXT[0]
         env:
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
