--- a/.github/workflows/deploy-app-engine.yml
+++ b/.github/workflows/deploy-app-engine.yml
@@ -15,5 +15,6 @@ jobs:
       id: deploy
       uses: google-github-actions/deploy-appengine@v0.2.0
       with:
-        project_id: "level-hope-372123"
-        credentials: "level-hope-372123-4f28d5a1d841.json"
+        #project_id: "level-hope-372123"
+        #credentials: ./level-hope-372123-4f28d5a1d841.json
+        serviceAccountJsonPlainText: ./level-hope-372123-4f28d5a1d841.json
