--- a/.github/workflows/deploy-app-engine.yml
+++ b/.github/workflows/deploy-app-engine.yml
@@ -15,4 +15,4 @@ jobs:
       id: deploy
       uses: google-github-actions/deploy-appengine@v0.2.0
       with:
-        credentials_json: level-hope-372123-4f28d5a1d841.json
+        credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
