--- a/.github/workflows/deploy-app-engine.yml
+++ b/.github/workflows/deploy-app-engine.yml
@@ -1,10 +1,13 @@
 
 name: learn-github-actions
 
+#on:
+ # pull_request:
+  #  types:
+   #   - closed
 on:
-  pull_request:
-    types:
-      - closed
+  push
+  
 jobs:
   if_merged:
     if: github.event.pull_request.merged == true
