--- a/.github/workflows/deploy-app-engine.yml
+++ b/.github/workflows/deploy-app-engine.yml
@@ -14,11 +14,12 @@ on:
 
   
 jobs:
-
-  steps:
-
-  - name: Deploy to App Engine
-    id: deploy
-    uses: google-github-actions/deploy-appengine@v0.2.0
-    with:
-      credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    steps:
+    - name: Deploy to App Engine
+      id: deploy
+      uses: google-github-actions/deploy-appengine@v0.2.0
+      with:
+        credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
